--- a/README
+++ b/README
@@ -1,12 +1,2 @@
-This is a mirror of http://www.vim.org/scripts/script.php?script_id=172
-
-A funny way to get used to VIM's h k l and <Space> key.
-The first (I hope) interactive game inside pure VIM!
-It's a work-in-progress version.
-
-Todo:
-- better random
-- better timing
-- shorter code
-
-If you like games, also see Sokoban vimscript#211!
+This is a branch (maintained by felleg) of the official TeTrIs.vim plugin
+It tries to follow more closely the Tetris guidelines than the official version.
